# src/main/java/com/github/jmgoyesc/javarecap/controllers/StatsController.java
@@ -16,13 +16,13 @@ public class StatsController {
                 .consumer(TypeStats.builder()
                         .messages(143)
                         .count(2)
-                        .speed("2 SECONDS")
+                        .speedInSeconds(2)
                         .messagesPerMinute(30)
                         .build())
                 .producer(TypeStats.builder()
                         .messages(143)
                         .count(2)
-                        .speed("2 SECONDS")
+                        .speedInSeconds(2)
                         .messagesPerMinute(30)
                         .build())
                 .build();
